--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>TRUTS DISCORD REDIRECT</title>
-      <meta http-equiv = "refresh" content = "0; url = https://discord.gg/96nAdBJ2Kj" />
+      <title></title>
+      <meta http-equiv = "refresh" content = "0; url = https://twitter.com/trutsxyz" />
    </head>
    <body>
       <p></p>
